filter options grid spacing fixed again

--- a/app/globals.css
+++ b/app/globals.css
@@ -320,26 +320,38 @@ button:hover {
   z-index: 4;
 }
 
+.filter-tag-bubble-container {
+  display: inline-block;
+}
+
 .filter-tag-bubble {
-  align-self: center;
+  align-items: center;
   background-color: #4fa283;
   border-radius: 50px;
   color: white;
   cursor: default;
-  display: inline-block;
-  font-size: medium;
+  display: flex;
+  justify-items: center;
   margin-left: 5px;
   padding-left: 10px;
-  width: fit-content;
+}
+
+.filter-tag-bubble-span {
+  font-size: 1rem;
+  height: 16px;
+  height: 16px;
+  line-height: 14px;
+  text-align: center;
 }
 
 /* TOOD: Center this */
 .filter-tag-bubble-x {
   border-radius: 50px;
-  padding-bottom: 4px;
+  display: flex;
+  padding-bottom: 8px;
   padding-left: 5px;
   padding-right: 10px;
-  padding-top: 5px;
+  padding-top: 8px;
 }
 
 .filter-tag-bubble-x:active,
@@ -374,6 +386,47 @@ button:hover {
   scrollbar-width: none;
 
   /* For Firefox */
+}
+
+.filter-screen-container {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 80px;
+  padding-top: 24px;
+}
+
+.filter-screen-container > h2 {
+  padding-bottom: 10px;
+  padding-left: 8%;
+}
+
+.filter-screen-category-grid-container {
+  display: flex;
+  justify-content: center;
+}
+
+.filter-screen-category-grid {
+  column-gap: 2.5%;
+  display: grid;
+  grid-template-columns: 18% 18% 18% 18% 18%;
+  padding-bottom: 30px;
+  row-gap: 24px;
+  width: clamp(300px, 85vw, 650px);
+}
+
+.filter-option-btn-container {
+  font-size: clamp(0.5rem, 2.8vw, 1rem);
+  text-align: center;
+}
+
+.filter-option-btn:active,
+.filter-option-btn:hover {
+  background-color: #f8fff7;
+}
+
+.filter-option-btn img {
+  height: auto;
+  width: clamp(50px, 80%, 75px);
 }
 
 .search-input {
@@ -467,47 +520,6 @@ button:hover {
   100% {
     opacity: 0;
   }
-}
-
-.filter-screen-container {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 80px;
-  padding-top: 24px;
-}
-
-.filter-screen-container > h2 {
-  padding-bottom: 10px;
-  padding-left: 8%;
-}
-
-.filter-screen-category-grid-container {
-  display: flex;
-  justify-content: center;
-}
-
-.filter-screen-category-grid {
-  column-gap: 2.5%;
-  display: grid;
-  grid-template-columns: 18% 18% 18% 18% 18%;
-  padding-bottom: 30px;
-  row-gap: 24px;
-  width: clamp(300px, 85vw, 650px);
-}
-
-.filter-option-btn-container {
-  font-size: clamp(0.5rem, 2.8vw, 1rem);
-  text-align: center;
-}
-
-.filter-option-btn:active,
-.filter-option-btn:hover {
-  background-color: transparent;
-}
-
-.filter-option-btn img {
-  height: auto;
-  width: clamp(50px, 80%, 75px);
 }
 
 /* Pokemon Grid */
